// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconButton should match snapshot with all the props 1`] = `
<div>
  <button
    aria-label="mockTooltip"
    class="plugin-btn servicenow-button-wrapper btn-icon mockExtraClass btn btn-outline-danger"
    tabindex="0"
    type="button"
  >
    <i
      class="mockIconClassName"
    />
  </button>
</div>
`;

exports[`IconButton should match snapshot with only tooltip text provided 1`] = `
<div>
  <button
    aria-label="mockTooltip"
    class="plugin-btn servicenow-button-wrapper btn-icon  btn btn-outline-danger"
    tabindex="0"
    type="button"
  />
</div>
`;
